[tool.poetry]
name = "gof-patterns-python"
version = "0.1.0"
description = ""
authors = ["Milan Suk <Milansuk@email.cz>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
